# codepropertygraph

./: .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  .travis.yml  Jenkinsfile  LICENSE  README.md  build-dotnet-bindings.sh  build.sbt  cpg.gron  cpg2overflowdb.sh  cpgvalidator.sh  fuzzyc2cpg.sh  gpg.priv.enc  nodeTypes.json  private-key.pem.enc  publishLocal.sh  regenerate-test-cpgs.sh  schema2json.sh  testserver.sh  updateDependencies.sh  upstream_sync.sh
.github/workflows/: build.yml  gh_release.yml  pr.yml  push.yml  release.yml
c2cpg/: README.md  build.sbt
c2cpg-tests/: build.sbt
callgraph/: build.sbt
codepropertygraph/: build.sbt
codepropertygraph/src/main/resources/: log4j2.xml
codepropertygraph/src/main/scala/: Benchmark.scala  Edges.scala  NewNodes.scala  Nodes.scala  NodesTg.scala
codepropertygraph/src/test/resources/: cpg.fg  cpg.odb
codepropertygraph1/: build.sbt
codepropertygraph1/src/main/scala/: Edges1.scala  Nodes1.scala  Test.scala
config/: logback.xml
console/: build.sbt
console2/: build.sbt
cpg1/: build.sbt
cpg2overflowdb/: build.sbt
cpgclientlib/: MANIFEST.in  README.md  cpg-create  cpg-query  deploy.sh  joern-create  joern-query  newestVersion.sh  runtests.sh  setVersion  setup.py
cpgclientlib/cpgclient/: CpgClient.py  cpgclient.py
cpgclientlib/tests/: test.py
cpgclientlib/tests/testcode/: test.c
cpgloader-janusgraph/: build.sbt
cpgloader-neo4j/: build.sbt
cpgloader-tinkergraph/: build.sbt
cpgloader-tinkergraph-shiftleft/: build.sbt
cpgqls-client-python/: README.md  example_usage.py  requirements.txt  setup.py
cpgqls-client-python/cpgqls_client/: __init__.py  client.py  queries.py
cpgqls-client-python/tests/: test_client.py  test_queries.py
cpgqueryingtests/: build.sbt
cpgserver/: build.sbt
cpgserver/src/main/resources/: application.conf  swagger.yaml
cpgserver/src/main/scala/: ScalatraBootstrap.scala
cpgsplitter/: build.sbt
cpgvalidator/: build.sbt
cppext/: build.sbt
dataflowengine/: build.sbt
dataflowengineoss/: build.sbt
dataflowengineoss-tests/: build.sbt
dataflowengineoss/src/test/resources/: default.semantics
domainClasses/: build.sbt
domainClasses/src/main/odbv2gen/: Accessors.scala  BaseTypes.scala  Cpg.scala  EdgeTypes.scala  GraphSchema.scala  NodeTypes.scala  RootTypes.scala
enhancements/: build.sbt
example/: README.md  build.sbt
example/project/: plugins.sbt
fuzzyc2cpg/: README.md  build.sbt
fuzzyc2cpg-tests/: build.sbt
fuzzyc2cpg/src/main/scala/: Fuzzyc2cpg.scala
fuzzyc2cpg/src/test/resources/: logback-test.xml
fuzzypp/: CMakeLists.txt  README.md
fuzzypp/src/: CMakeLists.txt  cliopts.cpp  cliopts.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp
fuzzypp/test/: CMakeLists.txt  cliopts_test.cpp  main.cpp  preprocessor_test.cpp  test_utils.cpp  test_utils.hpp
images/: cpg-internal-1.odg  cpg-internal-2.odg  cpg-internal-3.odg  cpg-internal-4.odg
img/: call-site.odg
macros/: build.sbt
macros-sm/: build.sbt
performance/: build.sbt
performance/src/main/scala/: MyTests.scala
project/: CodeGen.scala  DomainClassCreator.scala  FileUtils.scala  Helpers.scala  Projects.scala  Schema.scala  SchemaMerger.scala  SchemaMergerTest.scala  Utils.scala  Versions.scala  meta-build.sbt  plugins.sbt
project/project/: Versions.scala
proto-bindings/: build-dotnet-bindings.sh  build.sbt  cpg-proto-bindings.csproj
proto-bindings/python/: LICENSE  MANIFEST.in  PACKAGE-README.md  README.md  publish-package.sh  requirements.txt  setup.py
proto-bindings/python/cpgprotobuf/: __init__.py
queries/: build.sbt
query-primitives/: build.sbt
resources/: log4j2-test.xml
resources/cpgs/expression/: TestGraph.java
resources/cpgs/file/: FileTest.java
resources/cpgs/memberaccesslinker/: TestGraph.java
resources/cpgs/method/: TestGraph.java
resources/cpgs/methodparameter/: MethodParameterTest.java
resources/cpgs/namespace/: NamespaceTest.java
resources/cpgs/splitmeup/: InlineArguments.java  TestGraph.java
resources/cpgs/sqlinjectionservlet/: SqlInjectionServlet.java
resources/cpgs/steps/: TestGraph.java
resources/cpgs/type/: ClassHierarchyTest.java  ClassMemberTest.java
resources/testcode/scripts/list-funcs/: description.json  list-funcs.scala
samples/customcpg/: README.md  local-m2-publish.sh
samples/customcpg/schemas/: myschema.json
samples/pass/: README.md  build.sbt  samplepass.sh
schema/: build.sbt
schema-extender/: build.sbt
schema2json/: build.sbt
semanticcpg/: build.sbt
semanticcpg-tests/: build.sbt
(+1410 files in other folders)
